--- a/netlify.toml
+++ b/netlify.toml
@@ -1,48 +1,36 @@
-{
-  "build": {
-    "publish": ".",
-    "command": "echo 'No build needed - static site'"
-  },
-  "redirects": [
-    {
-      "from": "/index",
-      "to": "/",
-      "status": 301
-    }
-  ],
-  "headers": [
-    {
-      "for": "/*",
-      "values": {
-        "X-Frame-Options": "DENY",
-        "X-Content-Type-Options": "nosniff",
-        "X-XSS-Protection": "1; mode=block",
-        "Referrer-Policy": "strict-origin-when-cross-origin"
-      }
-    },
-    {
-      "for": "/*.css",
-      "values": {
-        "Cache-Control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "for": "/*.js",
-      "values": {
-        "Cache-Control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "for": "/*.jpg",
-      "values": {
-        "Cache-Control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "for": "/*.png",
-      "values": {
-        "Cache-Control": "public, max-age=31536000, immutable"
-      }
-    }
-  ]
-}
+[build]
+  publish = "."
+  command = "echo 'No build needed - static site'"
+
+[[redirects]]
+  from = "/index"
+  to = "/"
+  status = 301
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
+    X-XSS-Protection = "1; mode=block"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+[[headers]]
+  for = "/*.css"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.js"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.jpg"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.png"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
